# XCS224N-Assignment5

./: .gitignore  meta.json  pyproject.toml  requirements.cuda.txt  requirements.txt
src/: .gitignore  environment.yml  environment_cuda.yml  grader.py  run.sh
src/submission/: Google_Colab_XCS224N_A5.ipynb  attention.py  dataset.py  helper.py  vanilla.nopretrain.dev.predictions  vanilla.nopretrain.test.predictions
src/submission/mingpt-demo/: play_char.ipynb
